--- a/templates/login.html
+++ b/templates/login.html
@@ -4,10 +4,44 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-  <form method="post" style="padding: 10px; width: 30%">
+
+    <style>
+            /* The alert message box */
+        .alert {
+          padding: 20px;
+          background-color: #f44336; /* Red */
+          color: white;
+          margin-bottom: 15px;
+        }
+
+        /* The close button */
+        .closebtn {
+          margin-left: 15px;
+          color: white;
+          font-weight: bold;
+          float: right;
+          font-size: 22px;
+          line-height: 20px;
+          cursor: pointer;
+          transition: 0.3s;
+        }
+
+        /* When moving the mouse over the close button */
+        .closebtn:hover {
+          color: black;
+        }
+    </style>
+
+    {% if message %}
+        <div class="alert">
+            <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+            {{ message }}
+        </div>
+    {% endif %}
+    <form method="post" style="padding: 10px; width: 30%">
       {% csrf_token %}
       {% include 'form.html' with form=form %}
 
       <button type="submit" class="btn btn-primary" style="margin: 15px 0">Login</button>
-  </form>
+    </form>
 {% endblock %}
