--- a/templates/base.html
+++ b/templates/base.html
@@ -4,8 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
         <script src="https://hosted.paysafe.com/checkout/v2/paysafe.checkout.min.js"></script>
-        <script src="jquery-3.5.1.min.js"></script>
-        <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
         <title>PaySafe Demo</title>
         <style>
             /* Style the header with a grey background and some padding */
